# NUC-powerd

./: Cargo.toml  README.md
config/: nuc-powerd.example.toml
docs/: PHASE2_PROMPT.md  SERVICE_INSTALL_AND_VALIDATION.md  STRETCH_BODY_II_ADOPTION_PLAN.md
packaging/: nuc-powerd.service
scripts/: characterize_daemon.sh  install.sh  install_fleet_remote.sh  install_service_hardened.sh  robots.inventory.example  stress_test.sh  uninstall.sh  validate_system.sh
src/: actuators.rs  api.rs  config.rs  control.rs  controller.rs  io.rs  lib.rs  main.rs  policy.rs  sensors.rs  status.rs
tests/: api_status_integration.rs  fake_sysfs_apply.rs
web/: app.js  index.html  styles.css
