[package]
name = "nuc-powerd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Thermal-aware CPU policy daemon for Intel NUC systems"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "=0.8.8"
indexmap = "=2.2.6"

[dev-dependencies]
tempfile = "=3.10.1"
